[package]
name = "nbio"
version = "0.7.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Eric Thill"]
repository = "https://github.com/thill/nbio"
description = "Non-Blocking I/O"
keywords = ["tcp", "http", "nonblocking"]
categories = ["concurrency", "rust-patterns"]
exclude = ["Cargo.lock"]

[features]
default = ["crossbeam", "http", "mock", "mpsc", "tcp", "websocket"]
aeron = ["dep:libaeron-sys"]
crossbeam = ["dep:crossbeam-channel"]
http = ["tcp", "dep:chunked_transfer", "dep:http", "dep:httparse"]
mock = []
mpsc = []
tcp = ["dep:tcp-stream"]
websocket = ["http", "rand", "tcp", "dep:tungstenite"]

[dependencies]
chunked_transfer = { version = "1.4.1", optional = true }
circbuf = "0.2.1"
crossbeam-channel = { version = "0.5.13", optional = true }
http = { version = "0.2.9", optional = true }
httparse = { version = "1.8.0", optional = true }
libaeron-sys = { version = "1.44.1", optional = true }
rand = { version = "0.8.5", optional = true }
tcp-stream = { version = "0.26.1", optional = true }
tungstenite = { version = "0.21.0", optional = true }
