[package]
name = "nbio"
version = "0.21.3"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Eric Thill"]
repository = "https://github.com/thill/nbio"
description = "Non-Blocking I/O"
keywords = ["tcp", "http", "nonblocking"]
categories = ["concurrency", "rust-patterns"]
exclude = ["Cargo.lock"]

[features]
default = ["crossbeam", "http", "mock", "mpsc", "tcp", "websocket"]
aeron = ["dep:libaeron-sys"]
crossbeam = ["dep:crossbeam-channel"]
http = ["tcp", "dep:chunked_transfer", "dep:http", "dep:httparse"]
mock = []
mpsc = []
tcp = ["libc", "mio", "dep:tcp-stream"]
websocket = ["http", "rand", "tcp", "dep:tungstenite"]

[dependencies]
chunked_transfer = { version = "1.4.1", optional = true }
circbuf = "0.2.1"
crossbeam-channel = { version = "0.5.13", optional = true }
http = { version = "1.3.1", optional = true }
libc = { version = "0.2.158", optional = true }
mio = { version = "1.0.2", features = ["net", "os-poll"], optional = true }
native-tls = "0.2.12"
rustls-pemfile = "2.1.2"
httparse = { version = "1.8.0", optional = true }
libaeron-sys = { version = "1.44.1", optional = true }
rand = { version = "0.8.5", optional = true }
tcp-stream = { version = "0.31.2", optional = true, features = ["native-tls"]  }
tungstenite = { version = "0.23.0", optional = true }
